# microtrace

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
src/microtrace/: __init__.py  analysis.py  cli.py  image_io.py  metrics.py  report.py  segmentation.py  synthetic.py
tests/: test_segmentation.py  test_synthetic.py  test_workflow.py
